--- a/front-end/android/app/src/main/res/values/strings.xml
+++ b/front-end/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">gym-access</string>
-    <string name="title_activity_main">gym-access</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="app_name">gym access</string>
+    <string name="title_activity_main">gym access</string>
+    <string name="package_name">com.jenixindia.gymaccess</string>
+    <string name="custom_url_scheme">com.jenixindia.gymaccess</string>
 </resources>
